...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/route_direction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="NEXT\n------\nENTRANCE AND EXIT GATE, 310"
        app:layout_constraintWidth_max="180dp"
        app:layout_constraintBottom_toTopOf="@id/back_to_plan"
        app:layout_constraintStart_toStartOf="@id/skip_btn"
        app:layout_constraintEnd_toEndOf="@id/settings_button"/>

    <Button
        android:id="@+id/back_to_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_to_plan"
        app:layout_constraintEnd_toStartOf="@id/settings_button" />

    <Button
        android:id="@+id/settings_button"
...
